--- a/Module_2/index.html
+++ b/Module_2/index.html
@@ -1,37 +1,40 @@
-<html lang="en">
+<!DOCTYPE html>
+<html>
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	 <link rel="stylesheet" href="css/style.css">
-	<title>Responsive Layout</title>
 
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+<title>Responsive Layout</title>
+
+<link rel="stylesheet" type="text/css" href="css/style.css">
 
 </head>
+
 <body>
-	<div class="row">
-	<h1>Our Menu</h1>
-  <div class="col-lg-4 col-md-6 col-sm-12" id="container">
-    <p>Lorem ipsum dolor, sit amet consectetur, adipisicing elit. Deserunt ab quia eum possimus debitis illo consequuntur cum impedit! Non hic ratione minus reiciendis esse laboriosam rem fugit, quam ut iure!</p>
-  	<p id="p1">Chicken</p>
+<h1>Our Menu</h1>
 
+  <div class="col-lg-4 col-md-6 col-sm-12">
+  	<div class="box">
+  		<p class="content-name name1">Chicken</p>
+  		<p class="content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vestibulum nisl non nunc rutrum, lacinia porttitor mauris mollis. Proin consectetur lacus augue, non efficitur tortor maximus id. Aliquam pulvinar, nulla sed lacinia ullamcorper, quam odio tempor tellus, et condimentum leo diam ut orci. Pellentesque consequat dui turpis, a vehicula erat pretium a. Cras facilisis nisi elementum diam tincidunt gravida. Nam tincidunt ligula turpis, non lobortis odio maximus et. Nullam lacinia odio id porta venenatis. Nulla augue lorem, sollicitudin vel arcu ut, pellentesque dictum nisl.</p>
   	</div>
-
-  
-
-  <div class="col-lg-4 col-md-6 col-sm-12" id="container"><p>Lorem, ipsum dolor sit, amet consectetur adipisicing elit. Quis, iste, nostrum dignissimos unde officiis doloremque debitis fugit ut! Voluptate odit nam unde harum aliquam aperiam quibusdam quod corrupti provident pariatur!</p>
-
-  	<p id="p2">Beef</p>
-
   </div>
 
-  <div class="col-lg-4 col-md-12 col-sm-12" id="container"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, earum omnis natus voluptate, repudiandae inventore molestias eos reprehenderit corrupti nesciunt animi ea obcaecati vero numquam porro quidem? Numquam at, et!</p>
-
-  	<p  id="p3">Sushi</p>
-
+  <div class="col-lg-4 col-md-6 col-sm-12">
+  	<div class="box">
+   		<p class="content-name name2">Beef</p>
+   		<p class="content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vestibulum nisl non nunc rutrum, lacinia porttitor mauris mollis. Proin consectetur lacus augue, non efficitur tortor maximus id. Aliquam pulvinar, nulla sed lacinia ullamcorper, quam odio tempor tellus, et condimentum leo diam ut orci. Pellentesque consequat dui turpis, a vehicula erat pretium a. Cras facilisis nisi elementum diam tincidunt gravida. Nam tincidunt ligula turpis, non lobortis odio maximus et. Nullam lacinia odio id porta venenatis. Nulla augue lorem, sollicitudin vel arcu ut, pellentesque dictum nisl.</p>
+  	</div>
   </div>
 
-	</div>	
+  <div class="col-lg-4 col-md-12 col-sm-12">
+  	<div class="box">
+  		<p class="content-name name3">Sushi</p>
+  		<p class="content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vestibulum nisl non nunc rutrum, lacinia porttitor mauris mollis. Proin consectetur lacus augue, non efficitur tortor maximus id. Aliquam pulvinar, nulla sed lacinia ullamcorper, quam odio tempor tellus, et condimentum leo diam ut orci. Pellentesque consequat dui turpis, a vehicula erat pretium a. Cras facilisis nisi elementum diam tincidunt gravida. Nam tincidunt ligula turpis, non lobortis odio maximus et. Nullam lacinia odio id porta venenatis. Nulla augue lorem, sollicitudin vel arcu ut, pellentesque dictum nisl.</p>
+  	</div>	
+  </div>
 
 </body>
 </html>
