--- a/Module 3/index.html
+++ b/Module 3/index.html
@@ -21,27 +21,27 @@
 
 
 <nav class="navbar" id="top">
-  <div class="container-fluid">
-
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span> 
-      </button>
-      <a class="navbar-brand" href="#">Food, LLC</a>
+    <div class="container-fluid">
+  
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar" aria-expanded="false">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span> 
+        </button>
+        <a class="navbar-brand" href="#">Food, LLC</a>
+      </div>
+  
+      <div class="collapse" id="myNavbar" aria-expanded="false" style="height: 1px;">
+        <ul class="nav navbar-nav visible-xs">
+          <li><a class="menu-item" href="#">Chicken</a></li>
+          <li><a class="menu-item" href="#">Beef</a></li> 
+          <li><a class="menu-item" href="#">Sushi</a></li> 
+        </ul>
+      </div>
+  
     </div>
-
-    <div class="collapse" id="myNavbar">
-      <ul class="nav navbar-nav visible-xs">
-        <li><a class="menu-item" href="#">Chicken</a></li>
-        <li><a class="menu-item" href="#">Beef</a></li> 
-        <li><a class="menu-item" href="#">Sushi</a></li> 
-      </ul>
-    </div>
-
-  </div>
-</nav>
+  </nav>
 
 <h1 class="main-title">Our Menu</h1>
 
